# gsmarena-scraper

./: Cargo.toml  infinix_smartphones_recentes.csv  iphone_smartphones_recentes.csv  motorola_smartphones_recentes.csv  one_per_minute_log.txt  one_per_minute_progress_infinix_log.txt  one_per_minute_progress_iphone_log.txt  one_per_minute_progress_motorola_log.txt  one_per_minute_progress_xiaomi_log.txt  one_per_minute_results.csv  one_per_minute_results_infinix.csv  one_per_minute_results_iphone.csv  one_per_minute_results_motorola.csv  one_per_minute_results_xiaomi.csv  results_20251215_0403.csv  results_20251215_0403.txt  results_20251215_1619.csv  results_20251215_1619.txt  results_20251216_0121.csv  results_20251216_0121.txt  results_20251216_2127.csv  results_20251216_2127.txt  results_20251216_2223.csv  results_20251216_2223.txt  samsung_smartphones_recentes.csv  test_details.csv  xiaomi_smartphones_recentes.csv
src/: config.rs  libs.rs  main.rs  models.rs  scraper.rs  utils.rs
