[package]
name = "gsmarena-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
csv = "1.4.0"
env_logger = "0.11.8"
log = "0.4.29"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.12.25", features = ["json", "blocking"] }
scraper = "0.25.0"
select = "0.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
